Fixing helper text in tag

--- a/views/demo/demo.jade
+++ b/views/demo/demo.jade
@@ -279,7 +279,7 @@ block content
       li Get images with the following tags
         legend
           form#tagSearchForm(name="tagSearchForm")
-            input#tags(name="tag", placeholder="Tag name's separated by a comma", required) 
+            input#tags(name="tag", placeholder="Tag's sep. by comma", required)
             br
             input(name='limit', placeholder="Number of results")
             br
