--- a/views/mixins/css.jade
+++ b/views/mixins/css.jade
@@ -4,4 +4,5 @@ mixin css(moduleName)
     link(type="text/css", rel="stylesheet", href="stylesheets/grid/gridItem.css")
   else if (moduleName == 'gridItem')
     link(type="text/css", rel="stylesheet", href="stylesheets/grid/gridItem.css")
-  
+  else if (moduleName == 'tag')
+    link(type="text/css", rel="stylesheet", href="stylesheets/tag.css")
