--- a/views/mixins/gridItem.jade
+++ b/views/mixins/gridItem.jade
@@ -1,3 +1,12 @@
-mixin gridItem(itemId)
-  div.gridItem(id=itemId)
+include ./tag.jade
+
+mixin gridItem(item)
+  div.gridItem(id=item.id)
+    div.image
+      p item.imageUrl
+    div.title
+      p item.title
+    div.tags
+      each tag in item.tags
+        +tag(tag)
 
