--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,8 +9,16 @@ html
     script(type="text/javascript", src="http://code.jquery.com/jquery-1.10.1.min.js")
     script(type="text/javascript", src="http://code.jquery.com/jquery-migrate-1.2.1.min.js")
 
+    // Angular
+    script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js")
+    script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.js")
+    script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-sanitize.js")
+
+    // Main js
+    script(type="text/javascript", src="/javascripts/main.js")
+
     block head
 
-  body
+  body(data-ng-app="medImageApp", data-ng-controller="medImageAppController")
     div#content
       block content
