--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,22 @@
 extends layout
 
+block head
+  link(rel="stylesheet", href="/stylesheets/index.css")
+
 block content
   h1= title
-  p Welcome to #{title}
-  a(href="/demo") link to demo!
+  div.formContainer#loginContainer
+    h3 Login in here!
+    form#loginForm(action="/login" method="POST")
+      input(type="text" name="username" placeholder="Username" required)
+      input(type="password" name="password" placeholder="Password" required)
+      input(type="submit")
+
+  div.formContainer#registerContainer
+    h3 Register here!
+    form#registerForm(action="/whowantsusers" method="POST")
+      input(type="text" name="first_name" placeholder="First Name" required)
+      input(type="text" name="last_name" placeholder="Last Name" required)
+      input(type="text" name="username" placeholder="Username" required)
+      input(type="password" name="password" placeholder="Password" required)
+      input(type="submit")
