--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ block content
 
   div.formContainer#registerContainer
     h3 Register here!
-    form#registerForm(action="/whowantsusers" method="POST")
+    form#registerForm(action="/fuckit" method="POST")
       input(type="text" name="first_name" placeholder="First Name" required)
       input(type="text" name="last_name" placeholder="Last Name" required)
       input(type="text" name="username" placeholder="Username" required)
