--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,20 @@
-body {
-  padding: 50px;
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html, body {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 14px;
+  height: 100%;
+  margin: 0;
 }
 
 a {
@@ -13,4 +26,10 @@ legend {
   border-color: #ccc;
   padding-bottom: 10px;
   margin-bottom: 10px;
+  width: 100%;
+}
+
+/* Global classes and ids ---------------------------------------- */
+#content {
+  height: 100%;
 }
