--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,11 +3,14 @@ html
   head
     title= title
     link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,200italic,300italic,400italic,600italic,700italic")
-    link(rel="stylesheet", href="/stylesheets/style.css")
 
     // jQuery
     script(type="text/javascript", src="http://code.jquery.com/jquery-1.10.1.min.js")
     script(type="text/javascript", src="http://code.jquery.com/jquery-migrate-1.2.1.min.js")
+
+    // Bootstrap
+    link(rel="stylesheet", href="external/css/bootstrap.css")
+    script(type="text/javascript", src="/external/js/bootstrap.js")
 
     // Angular
     script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js")
@@ -15,7 +18,10 @@ html
     script(type="text/javascript", src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-sanitize.js")
 
     // Main js
-    script(type="text/javascript", src="/javascripts/main.js")
+    script(type="text/javascript", src="javascripts/main.js")
+
+    // Main css
+    link(rel="stylesheet", href="stylesheets/style.css")
 
     block head
 
