annotations can be submit, and are loaded from db on page load

--- a/views/editorTest.jade
+++ b/views/editorTest.jade
@@ -5,4 +5,4 @@ block head
   include mixins/editor.jade
 
 block content
-  +editor("/local/uploads/5443f52107ca2c94310d500f/imwatching1413739839641.jpg")
+  +editor("/local/uploads/5443f52107ca2c94310d500f/imwatching1413739839641.jpg", "5443f52107ca2c94310d500f")
