tooltips, editor is responsive on window expand, but glitches on shrink

--- a/views/mixins/editor.jade
+++ b/views/mixins/editor.jade
@@ -44,7 +44,7 @@ mixin editor(imgUrl, image_id)
                 div.btn-group
                   button(id="editBtn", class="btn btn-default editTypeBtn")
                     span.glyphicon.glyphicon-pencil
-                  button(id="annotationBtn", class="btn btn-default editTypeBtn", disabled) 
+                  button(id="annotationBtn", class="btn btn-default editTypeBtn highlight", disabled) 
                     span.glyphicon.glyphicon-record
                   button(id="moveBtn", class="btn btn-default editTypeBtn")
                     span.glyphicon.glyphicon-move
