--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,9 +1,70 @@
-.formContainer {
-  border: 1px solid #ccc;
-  margin-bottom: 20px;
-  width: 400px;
-  padding: 20px;
+body {
+  background: url(/images/dna.jpg) no-repeat fixed;
+  background-position: center;
 }
+
+#landingPageContainer {
+  padding: 30px;
+  min-width: 600px;
+}
+
+#pageTitle {
+  text-align: center;
+  font-size: 84px;
+  margin-top: 100px;
+  margin-bottom: 40px;
+  font-weight: normal;
+  color: white;
+  text-shadow: 2px 2px 5px rgba(22, 22, 22, 1);
+}
+
+.formContainer {
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  text-align: center;
+  background-color: white;
+  box-shadow: 0px 0px 10px 0px;
+}
+
+.formContainer > .startMessage {
+  font-size: 24px;
+  margin-top: 0px;
+  margin-bottom: 20px;
+}
+
 .formContainer input {
   display: block;
+  width: 100%;
+  margin-bottom: 15px;
+  padding: 10px 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+.formContainer .nameInput {
+  display: inline-block;
+  width: 224px;
+}
+.formContainer #firstName {
+  margin-right: 10px;
+}
+
+.formContainer .formError {
+  margin-bottom: 10px;
+}
+.formContainer .submitBtn {
+  background-color: #003344;
+  color: white;
+}
+
+.formContainer .switchFormLink {
+  text-decoration: underline;
+}
+.formContainer .switchFormLink:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
