--- a/views/mixins/css.jade
+++ b/views/mixins/css.jade
@@ -4,3 +4,6 @@ mixin css(moduleName)
     
   else if (moduleName == 'tag')
     link(type="text/css", rel="stylesheet", href="stylesheets/tag.css")
+
+  else if (moduleName == 'mainpage')
+    link(type="text/css", rel="stylesheet", href="stylesheets/main.css")
