--- a/public/stylesheets/grid/grid.css
+++ b/public/stylesheets/grid/grid.css
@@ -1,5 +1,54 @@
 .gridItem {
-  width: 100px;
-  height: 100px;
-  border: 1px solid black;
+  background-color: white;
+  border-radius: 2px;
+  border: 1px solid rgb(199, 199, 199);
+  height: 290px;
+  position: relative;
+  width: 240px;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
+  display: inline-block;
+  vertical-align: top;
+  margin: 5px;
+}
+
+.gridItem .image {
+  width: 220px;
+  height: 200px;
+  overflow: hidden;
+  margin: 10px auto 5px auto;
+  text-align: center;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+.gridItem .image img {
+  max-width: 220px;
+  max-height: 190px;
+  margin: 0 auto;
+}
+
+.gridItem .title {
+  text-align: center;
+  padding: 0 10px;
+  overflow: hidden;
+  max-height: 40px;
+  font-size:14pt;
+  font-weight: 300;
+  margin-top: 2px;
+}
+
+.title p {
+  margin: 0;
+}
+
+.gridItem .tagsContainer {
+  padding: 4px;
+  max-height: 38px;
+  overflow: hidden;
+  text-align: center;
+}
+
+.tagsContainer .tagItem {
+  display: inline-block;
+  padding: 2px;
 }
