--- a/public/stylesheets/tag.css
+++ b/public/stylesheets/tag.css
@@ -1,11 +1,17 @@
 .tag {
-  background-color:white;
+  background-image: linear-gradient(#4F5789, #10226B);
   border-radius:2px;
-  display: inline-block;
-  text-align:center;
-  padding: 4px 8px;
-  border: 1px solid rgb(231, 50, 50);
-  background-image: linear-gradient(#e63d45, #c11a22);
-  color: white;
+  border: 1px solid rgb(65, 71, 181);
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
+  color: white;
+  cursor: pointer;
+  display: inline-block;
+  padding: 3px 6px;
+  text-align:center;
+  min-width: 36px;
+}
+
+.tag:hover{
+  background-image: linear-gradient(#443C3C, #202020);
+  border: 1px solid black;
 }
