--- a/views/mixins/grid.jade
+++ b/views/mixins/grid.jade
@@ -7,16 +7,18 @@ block head
   script(type="text/javascript", src="/javascripts/mixins/gridController.js")
 
 mixin grid(id)
-  div(id=id, data-ng-controller="gridController")
+  div.grid(id=id, data-ng-controller="gridController")
     div(ng-init="user=#{JSON.stringify(session.user.username)}")
-    div(ng-repeat="image in viewModel.images track by $index")
-      div.gridItem(id='{{image._id}}')
-        div.image
-          p(ng-bind='image.image_url')
-        div.title
-          p(ng-bind='image.title')
-        div.tags
-          div(ng-repeat="tag in image.tags")
-            +tag('{{tag}}')
+    div.gridItem(id='{{image._id}}' ng-repeat="image in viewModel.images track by $index")
+      div.image
+        img(ng-src='{{image.image_url}}')
+      div.title
+        p(ng-bind='image.title')
+      div.tagsContainer
+        div.tagItem(ng-repeat="tag in image.tags")
+          +tag('{{tag}}')
 
+    <br>
     button(id="testGridButton") getUserImages
+    <br>
+    button(id="testSearchButton") getSearchButton
